--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,33 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true
-    },
-    "extends": "airbnb-base",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-        "class-methods-use-this": "off",
-        "arrow-parens": "off",
-        "prefer-arrow-callback": "off",
-        "func-names": "off",
-        "object-curly-newline": "off"
+  "env": {
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["airbnb-base", "prettier"],
+  "plugins": ["yml"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "class-methods-use-this": "off",
+    "arrow-parens": "off",
+    "prefer-arrow-callback": "off",
+    "func-names": "off",
+    "object-curly-newline": "off",
+    "import/prefer-default-export": "off",
+    "no-return-await": "off",                 
+    "import/no-extraneous-dependencies": "off"
+    
+  },
+  "overrides": [
+    {
+      "files": ["*.yaml", "*.yml"],
+      "plugins": ["yml"],
+      "rules": {
+        "yml/no-empty-document": "error",
+        "yml/no-trailing-spaces": "error"
+      }
     }
+  ]
 }
