--- a/.github/workflows/manual-run-pipeline.yml
+++ b/.github/workflows/manual-run-pipeline.yml
@@ -1,1 +1,36 @@
+name: Manual Test Run
 
+on:
+  workflow_dispatch:
+
+jobs:
+  run-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.14.0'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: Run UI tests
+        run: npm run tests:ui
+
+      - name: Run API tests
+        run: npm run tests:api
+
+      - name: Upload test report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 7
