--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./ --fix",
-    "tests:ui": "playwright test --grep @ui", 
-    "tests:api": "playwright test --grep @api", 
-    "tests:all": "playwright test" 
-
+    "lint": "eslint ./ --ext .js,.yaml,.yml --fix ",
+    "format": "prettier --write '**/*.{js,json,ts,yml,yaml}'",
+    "tests:ui": "playwright test --grep @ui",
+    "tests:api": "playwright test --grep @api",
+    "tests:all": "playwright test"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,10 @@
     "@types/node": "^24.3.1",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.32.0"
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-yml": "^1.18.0",
+    "prettier": "^3.6.2",
+    "yaml-eslint-parser": "^1.3.0"
   }
 }
