ci: integrate ESLint and Prettier in CI, secure admin password with GitHub Secret

--- a/.github/workflows/manual-run-pipeline.yml
+++ b/.github/workflows/manual-run-pipeline.yml
@@ -21,10 +21,18 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
+      - name: Run ESLint
+        run: npm run lint
+
+      - name: Run Prettier
+        run: npm run format
+
       - name: Run UI tests
         run: npm run tests:ui
 
       - name: Run API tests
+        env:
+          ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
         run: npm run tests:api
 
       - name: Upload test report
